# newdatagov

./: .env.example  .gitignore  BRD_DataGov_MVP_v1.docx  DEPLOYMENT_FREE.md  DEVPLAN_DataGov_MVP_v1.md  LAUNCH_READINESS.md  Makefile  README.md  TSD_DataGov_MVP_v1.docx  UIUX_Brief_DataGov_MVP_v1.docx  kanban.html  render.yaml  start-localhost.ps1
backend/: .env.cloud.example  .vercelignore  Makefile  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 7f9bc7cad289_initial_schema.py
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/connectors/: __init__.py  base.py  sqlite_connector.py
backend/app/middleware/: auth.py
backend/app/models/: __init__.py  asset.py  audit_log.py  column.py  connector.py  dq_issue.py  glossary.py  lineage.py  mixins.py  notification.py  policy.py  project.py  role.py  scan.py  user.py
backend/app/routers/: catalogue.py  connectors.py  glossary.py  governance.py  identity.py  lineage.py  notifications.py  quality.py  scans.py  uploads.py
backend/app/schemas/: auth.py  catalogue.py  connector.py  glossary.py  governance.py  lineage.py  notification.py  quality.py  scan.py  user.py
backend/app/scripts/: __init__.py  seed_dev.py
backend/app/services/: access_control.py  audit_service.py  auth_service.py  catalogue_service.py  classification_service.py  connector_service.py  (+10 more)
backend/tests/: conftest.py  test_auth.py  test_phase1.py  test_phase2.py  test_phase3.py  test_projects.py  test_standard_format_dq.py  test_uploads.py
(+46 files in other folders)
