[project]
name = "datagov-api"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi==0.115.6",
  "uvicorn[standard]==0.34.0",
  "sqlalchemy==2.0.36",
  "alembic==1.14.0",
  "pydantic-settings==2.7.1",
  "psycopg[binary]==3.2.3",
  "python-jose[cryptography]==3.3.0",
  "passlib[bcrypt]==1.7.4",
  "bcrypt==4.0.1",
  "celery==5.4.0",
  "redis==5.2.1",
  "python-multipart==0.0.20",
  "openpyxl==3.1.5",
]

[project.scripts]
app = "app.main:app"

[tool.vercel.scripts]
build = "python -m app.scripts.seed_dev"
